--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/custom.css" charset="utf-8">
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/dimple/2.2.0/dimple.latest.min.js"></script>
+<script src="//d3js.org/d3.v3.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/dimple/2.2.0/dimple.latest.min.js"></script> -->
 </head>
 
 <body>
@@ -71,8 +71,10 @@
     <div class="title">
       Stock Chart of Apple inc.
     </div>
+
   </div>
-  <script src='js/dimple.js'></script>
+
+  <script src='js/d3.js'></script>
 </body>
 
 </html>
