--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#"> Home</a></li>
           <li><a href="#AAPL"> AAPL</a></li>
-          <li><a href="#GOOGLE"> GOOGLE</a></li>
+          <li><a href="#GOOGL"> GOOGL</a></li>
         </ul>
       </div>
     </nav>
