--- a/pages/home.html
+++ b/pages/home.html
@@ -3,3 +3,16 @@
 
      <p>{{ message }}</p>
  </div>
+
+ <div class="box">
+   <img src="img/AppleChart.png" />
+     <div class="overlay">
+     </div>
+   <a href="#AAPL">Apple inc.</a>
+ </div>
+ <div class="box">
+   <img src="img/GoogleChart.png" />
+     <div class="overlay">
+     </div>
+   <a href="#GOOGL">Google inc.</a>
+ </div>
