--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
 
   <title>Charts</title>
-
+  <base href="/">
 
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/custom.css" charset="utf-8">
 
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.1/angular.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.1/angular-route.js"></script>
   <script src="js/app.js"></script>
   <script src="js/appleController.js"></script>
   <script src="js/googleController.js"></script>
@@ -30,17 +30,15 @@
         </div>
 
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#"> Home</a></li>
-          <li><a href="#AAPL"> AAPL</a></li>
-          <li><a href="#GOOGL"> GOOGL</a></li>
+          <li><a href="/"> Home</a></li>
+          <li><a href="/apple"> AAPL</a></li>
+          <li><a href="/google"> GOOGL</a></li>
         </ul>
       </div>
     </nav>
   </header>
 
-  <div id="main">
-    <div ng-view></div>
-  </div>
+  <div id="main" ng-view></div>
 
 </body>
 
