--- a/pages/home.html
+++ b/pages/home.html
@@ -8,11 +8,11 @@
    <img src="img/AppleChart.png" />
      <div class="overlay">
      </div>
-   <a href="/apple">Apple inc.</a>
+   <a href="#AAPL">Apple inc.</a>
  </div>
  <div class="box">
    <img src="img/GoogleChart.png" />
      <div class="overlay">
      </div>
-   <a href="/google">Google inc.</a>
+   <a href="#GOOGL">Google inc.</a>
  </div>
