--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script src="js/appleController.js"></script>
   <script src="js/googleController.js"></script>
   <script src="js/mainController.js"></script>
+  <script src="js/infoController.js"></script>
 
   <script src="//d3js.org/d3.v3.min.js"></script>
 
@@ -30,9 +31,9 @@
         </div>
 
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#"> Home</a></li>
           <li><a href="#AAPL"> AAPL</a></li>
           <li><a href="#GOOGL"> GOOGL</a></li>
+          <li><a href="#Info"> Stock Information</a><li>
         </ul>
       </div>
     </nav>
